// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load config should load from current working directory 1`] = `
{
  "deep": {
    "object": {
      "property": "value",
    },
  },
  "foo": {
    "bar": {
      "a": "foo_bar_3",
      "b": "foo_bar_2",
      "c": "foo_bar_4",
      "e": "default-e",
      "number": 9,
    },
  },
  "name": "hello",
  "url": "https://example.com",
}
`;

exports[`load config should load from multiple directories with overriding orders 1`] = `
{
  "foo": "bar",
  "var1": "C",
}
`;

exports[`load config should load from specific directory 1`] = `
{
  "deep": {
    "object": {
      "property": "value",
    },
  },
  "foo": {
    "bar": {
      "a": "foo_bar_3",
      "b": "foo_bar_2",
      "c": "foo_bar_4",
      "e": "default-e",
      "number": 9,
    },
  },
  "name": "hello",
  "url": "https://example.com",
}
`;

exports[`load config should load with defaults config 1`] = `
{
  "deep": {
    "object": {
      "property": "value",
    },
  },
  "foo": {
    "bar": {
      "a": "foo_bar_3",
      "b": "foo_bar_2",
      "c": "foo_bar_4",
      "e": "default-e",
      "number": 9,
    },
  },
  "name": "hello",
  "password": "123456",
  "url": "https://example.com",
}
`;

exports[`load config should remove null and blank values default 1`] = `
{
  "awesome": "yes",
  "deep": {
    "object": {
      "property": "value",
    },
  },
  "foo": {
    "bar": {
      "a": "foo_bar_3",
      "b": "foo_bar_2",
      "c": "foo_bar_4",
      "e": "default-e",
      "number": 9,
    },
  },
  "name": "hello",
  "url": "https://example.com",
}
`;
